story-line and theme work

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>The Right Dead King</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/white.css">
+		<link rel="stylesheet" href="css/theme/blood.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -25,27 +25,53 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-						The Right Dead King
-						<br/>
-						<img src="img/the_king.jpg" style="height:400px;border:0"/>
-						<br/>
-						By Alan Schipp
+						<h3>The Right Dead King</h3>
+						<img src="img/the_king.jpg" style="width:25%;border:0"/>
+						<h4>By Alan Schipp</h4>
 				</section>
 				<section>
-					<p style="text-align:left;">A Long time ago, there was 10,000 Knights and One King</p>
-					<br/>
-					<img src="img/knights.jpg" style="border:0"/>
+					<p style="text-align:left;">A Long time ago, there was 10,000 Knights and one King</p>
+					<img src="img/knights.jpg" style="width:85%;border:0"/>
 				</section>
-				<section>And then the King ate poisoned food and got cursed.  He was a Skeleton.</section>
-				<section>And then he ate people</section>
-				<section>And only 2 people Lived.</section>
-				<section>The King ate one person.</section>
-				<section>He can't talk because he has no vocal cords</section>
-				<section>[picture]</section>
-				<section>It is a dream</section>
-				<section>[picture]</section>
-				<section>Then the King is gone forever.</section>
-				<section>[picture]</section>
+				<section>
+					<p style="text-align:left.">And then the King ate poisoned food and got cursed.</p>
+				</section>
+				<section>
+					<p>He was a Skeleton.</p>
+					<img src="img/king_skeleton.jpg" style="width:25%;border:0;"/>
+				</section>
+				<section>
+					<p>And then he ate people</p>
+					<img src="img/king_ate.jpg" style="width:45%;border:0;"/>
+				</section>
+				<section>
+					<p>And only 2 people Lived.</p>
+					<img src="img/two_people.jpg" style="width:25%;border:0;"/>
+				</section>
+				<section>
+					<p>The King ate one person.</p>
+					<img src="img/one_person.jpg" style="width:45%;border:0;"/>
+				</section>
+				<section>
+					<p>He can't talk because he has no vocal cords</p>
+					<img src="img/no_vocal_chords.jpg" style="width:18%;border:0;"/>
+				</section>
+				<section>
+					<img src="img/castle.jpg" style="width:40%;border:0;"/>
+				</section>
+				<section>
+					<p>It is a dream</p>
+					<img src="img/bed.jpg" style="width:45%;border:0;"/>
+				</section>
+				<section>
+					<img src="img/bed_scream.jpg" style="width:45%;border:0;"/>
+				</section>
+				<section>
+					<p>Then the King is gone forever.</p>
+				</section>
+				<section>
+					<img src="img/skulls.jpg" style="width:85%;border:0;"/>
+				</section>
 			</div>
 		</div>
 
